--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ margin :0;
 padding:0;
 font-family:'Poppins', sans-serif;
 box-sizing:border-box;
-
+}
+.hero{
+width: 100%;
+min-height: 100vh;
+background: linear-gradient(45deg, #08001f, #30197d);
+color:#fff;
+position: relative;
 
 }
